--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -8,33 +8,57 @@
     --prim-fgcolor: #101010;
     --prim-bgcolor: #fbcbc9;
     --sec-fgcolor: #dedede;
-    --sec-bgcolor: #be1558;
+    --sec-bgcolor: #e75874;
     --tert-fgcolor: #dedede;
-    --tert-bgcolor: #e75874;
+    --tert-bgcolor: #be1558;
     --dark-fgcolor: #dedede;
     --dark-bgcolor: #322514;
-    --link-color: dodgerblue;
-    --shadow-color: #777777;
-    --border-color: #ff00ff;
+    --link-color: #1B84EA;
+    --btn-fgcolor: #dedede;
+    --btn-bgcolor: #322514;
+    --btn-active-bgcolor: #45331c;
+    --shadow-color: #322514;
+    --border-color: #322514;
+    /* remove scrollbars */
     scrollbar-width: none;
+}
+.noselect {
+    /* disable user text selection */
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+.select {
+    /* disable user text selection */
+    -webkit-touch-callout: initial; /* iOS Safari */
+      -webkit-user-select: initial; /* Safari */
+       -khtml-user-select: initial; /* Konqueror HTML */
+         -moz-user-select: initial; /* Old versions of Firefox */
+          -ms-user-select: initial; /* Internet Explorer/Edge */
+              user-select: initial; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 ::-webkit-scrollbar {
     width: 0;
 }
 header {
-    padding: 20px 10px;
+    padding: 15px;
     position: fixed;
     top: 0;
     display: flex;
-    width: calc(100% - 20px);
-    color: var(--sec-fgcolor);
-    background-color: var(--sec-bgcolor);
-    box-shadow: 0.5px 0.5px 2px 0px var(--dark-bgcolor);
+    align-items: center;
+    width: calc(100% - 30px);
+    color: var(--tert-fgcolor);
+    background-color: var(--tert-bgcolor);
+    box-shadow: 0px -4px 10px 0px var(--shadow-color);
 }
 footer {
+    margin-top: auto;
     padding: 10px;
-    position: fixed;
-    bottom: 0;
     display: flex;
     width: calc(100% - 20px);
     height: 1rem;
@@ -49,22 +73,14 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
-p.message {
-    margin: 10px auto;
-    padding: 10px;
-    width: calc(100% - 20px);
-    white-space: pre-wrap;
-    border-radius: 10px;
-    box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color);
-}
 button {
     margin: 10px auto;
     padding: 10px 20px;
     width: calc(70% - 40px);
     border: 0px;
     border-radius: 10px;
-    color: var(--sec-fgcolor);
-    background-color: var(--dark-bgcolor);
+    color: var(--btn-fgcolor);
+    background-color: var(--btn-bgcolor);
     transition-duration: 200ms;
     -webkit-tap-highlight-color: transparent;
     -moz-tap-highlight-color: transparent;
@@ -73,9 +89,7 @@ button:hover {
     cursor: pointer;
 }
 button:active {
-    color: var(--tert-fgcolor);
-    // background-color: var(--sec-bgcolor);
-    transform: scale(0.95);
+    background-color: var(--btn-active-bgcolor);
 }
 div {
     padding: 10px;
