--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     font-family: "Helvetica", sans-serif;
-    font-size: 100%;
+    font-size: 97.5%;
     /* color palette taken from https://99designs.com/profiles/martislupus/designs/247401 */
     --light-fgcolor: #303030;
     --light-bgcolor: #fdfdfd;
@@ -21,6 +21,11 @@
     --border-color: #322514;
     /* remove scrollbars */
     scrollbar-width: none;
+}
+@media only screen and (min-width: 400px) {
+    * {
+        font-size: 100%;
+    }
 }
 .noselect {
     /* disable user text selection */
