--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -62,6 +62,14 @@ header {
     color: #ffffff;
     opacity: 0.9;
 }
+h1.accented,
+h2.accented,
+h3.accented,
+h4.accented,
+h5.accented,
+h6.accented {
+    color: var(--prim-bgcolor);
+}
 footer {
     margin-top: auto;
     padding: 20px;
@@ -130,6 +138,20 @@ div {
     padding: 10px;
     width: calc(100% - 20px);
     border-radius: 10px;
+}
+div.SplashScreen {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    inset: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    color: var(--prim-fgcolor);
+    background-color: var(--prim-bgcolor);
+    border-radius: 0;
+    zIndex: 100;
 }
 div.horz-layout {
     display: flex;
