common: added some css to button
These rules favour centered placement of
elements inside the button

--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -119,6 +119,12 @@ textarea.msg::placeholder {
 button {
     margin: 10px auto;
     padding: 10px 50px;
+    width: 50%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border: 0px;
     border-radius: 10px;
     color: var(--btn-fgcolor);
