--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -182,3 +182,12 @@ div.vert-scroll {
         font-size: 100%;
     }
 }
+@keyframes loadspin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(359.9deg);
+    }
+}
+       
