--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -93,8 +93,8 @@ p.info {
 }
 input.text {
     margin: 10px auto;
-    padding: 10px 20px;
-    width: calc(90% - 40px);
+    padding: 10px 15px;
+    width: calc(90% - 30px);
     border: 0px;
     border-radius: 10px;
     color: var(--prim-fgcolor);
@@ -106,8 +106,8 @@ input.text::placeholder {
 }
 textarea.msg {
     margin: 10px auto;
-    padding: 10px 20px;
-    width: calc(90% - 40px);
+    padding: 15px;
+    width: calc(90% - 30px);
     height: 70px;
     border: 0px;
     border-radius: 10px;
