--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -166,12 +166,12 @@ div.SplashScreen {
     border-radius: 0;
     z-index: 100;
 }
-div.SplashScreen div.lodingAnim {
+div.SplashScreen div.loadingAnim {
     margin: 0;
-    width: 100px;
-    height: 100px;
-    border: 2px solid var(--tert-bgcolor);
-    border-top: 2px solid transparent;
+    width: 50px;
+    height: 50px;
+    border: 10px solid var(--tert-bgcolor);
+    border-top: 10px solid transparent;
     border-radius: 50%;
     background-color: transparent;
     animation: loadspin 1s linear infinite;
