--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -1,7 +1,9 @@
-* {
+*:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
     margin: 0;
-    font-family: "Helvetica", sans-serif;
     font-size: 99%;
+}
+* {
+    font-family: "Helvetica", sans-serif;
     /* color palette taken from https://99designs.com/profiles/martislupus/designs/247401 */
     --light-fgcolor: #303030;
     --light-bgcolor: #fdfdfd;
@@ -25,6 +27,36 @@
     scrollbar-width: none;
     /* remove outline box */
     outline: none;
+}
+h1 {
+    font-size: 36px;
+    line-height: 36px;
+}
+h2 {
+    font-size: 30px;
+    line-height: 30px;
+}
+h3 {
+    font-size: 24px;
+    line-height: 24px;
+}
+h4 {
+    font-size: 18px;
+    line-height: 18lx;
+}
+h5 {
+    font-size: 14px;
+    line-height: 14px;
+}
+h6 {
+    font-size: 12px;
+    line-height: 12px;
+}
+h1, h2, h3,
+h4, h5, h6 {
+    margin: 10px;
+    margin-left: 0px;
+    padding: 0px;
 }
 .noselect {
     /* disable user text selection */
@@ -61,6 +93,10 @@ header {
     box-shadow: 0px -4px 10px 0px var(--dark-shadow-color);
     color: #ffffff;
     opacity: 0.9;
+}
+header h2 {
+    margin: 0;
+    font-size: 1.5rem;
 }
 h1.accented,
 h2.accented,
