minor UI improvements

--- a/development/public/common/styles/markdown.css
+++ b/development/public/common/styles/markdown.css
@@ -56,6 +56,7 @@ div.markdown hr {
 }
 div.markdown p {
     margin: 10px 0;
+    word-wrap: break-word;
 }
 div.markdown blockquote {
     margin: 10px 0;
