--- a/development/public/common/styles/common.css
+++ b/development/public/common/styles/common.css
@@ -91,6 +91,7 @@ header {
     box-shadow: 0px -4px 10px 0px var(--dark-shadow-color);
     color: #ffffff;
     opacity: 0.9;
+    z-index: 50;
 }
 header h2 {
     margin: 0;
