grid template auto caused long words to occupy full viewport
now, its set to 100%

--- a/development/public/common/styles/markdown.css
+++ b/development/public/common/styles/markdown.css
@@ -57,6 +57,7 @@ div.markdown hr {
 div.markdown p {
     margin: 10px 0;
     word-wrap: break-word;
+    text-overflow: ellipsis;
 }
 div.markdown blockquote {
     margin: 10px 0;
